# bev_semantic_map

./: .gitignore  README.md  bev.yml  conda.yaml  package.xml  requirements.txt  run.py  setup.py
bev_semantic_map_ros/: CMakeLists.txt  bev_inference.py  package.xml  setup.py
bev_semantic_map_ros/config/: trav_map_filter.yaml  trav_map_filter_micro_planner.yaml
bev_semantic_map_ros/include/: bev_inference_ros.hpp
bev_semantic_map_ros/launch/: bev_inference.launch
bev_semantic_map_ros/rviz/: demo.rviz  gravity_sensor.rviz  supervision_signal.rviz
bev_semantic_map_ros/scripts/: bev_inference.py
bev_semantic_map_ros/src/: bev_inference_ros.cpp
bevnet/: run.py
bevnet/cfg/: __init__.py  data_params.py  model_params.py  params.py  run_params.py
bevnet/dataset/: __init__.py  demo_dataset.py  helper.py
bevnet/loss/: __init__.py  loss.py
bevnet/models/: __init__.py  ae.py  linear_rnvp.py  mlp.py
bevnet/network/: __init__.py  bev_net.py  generic_pointcloud_backbone.py  loss.py  lss_net.py  lss_tools.py  mlp.py  point_pillars.py  utils.py
bevnet/network/ops/: iou3d_module.py  setup.py  voxel_module.py
bevnet/ops/: __init__.py
bevnet/ops/bev_pool/: bev_pool.py
bevnet/scripts/: save_black_img.py
bevnet/scripts/conversion/: remove_different_files.py  resize_torch_images2.py  save_files_in_dir_to_single_file.py  save_jpg_img_to_tensor.py  save_npy_img_to_jpg.py  save_rgb_to_bgr.py  save_torch_img_to_jpg.py
bevnet/scripts/dataset_generation/: create_pos_feat_dataset.py
bevnet/scripts/inspection/: compute_pca_vectors.py  fuse_output_predictions.py  print_tf.py  print_torch_img.py  unflatten_img.py
bevnet/scripts/labelling/: download_data_from_segments_ai.py
bevnet/scripts/visualization/: create_gif.py  plot_gt_mask_on_image.py  plot_overlay_on_image.py  stack_pred_and_gt_mask.py  stack_two_images.py
bevnet/utils/: __init__.py  evaluate.py  timing.py  visu.py
bevnet/utils/dynamic_params/: CMakeLists.txt
bevnet/utils/dynamic_reconfigure_params/: CMakeLists.txt  package.xml
bevnet/utils/dynamic_reconfigure_params/cfg/: Tutorials.cfg
bevnet/utils/dynamic_reconfigure_params/scripts/: client.py  server.py
bevnet/utils/visu/: CMakeLists.txt  package.xml
bevnet/utils/visu/cfg/: config.rviz  map.rviz  pred.rviz  train.rviz
bevnet/utils/visu/launch/: bev_visualizer.launch  bevnet_visualizer.launch  visualizer.launch  visualizer_pred.launch  visualizer_train.launch  visualizer_train_pred.launch
bevnet/utils/visu/src/: bev_visualizer.py  bevnet_visualizer.py  map_visualizer.py  pc_visualizer.py  pred_visualizer.py  ros_visualizer.py  train_pred_visualizer.py  train_visualizer.py  visualizer.py
data/2024_03_08_10_22_10/config/: data_params.json  model_params.json  run_params.json
include/: bev_inference_ros.hpp
launch/: bev_node.launch
perception_bev_learning/: README.md  environment.yaml  requirements.txt  setup.py
perception_bev_learning/assets/: elevation_clip_-1_1_scale_0.05_prob_cluster.pt  wheel_risk_cvar_0_1_prob.pt  wheel_risk_cvar_0_1_prob_cluster.pt
perception_bev_learning/cfg/: train.yaml  train_anymal.yaml  train_micro.yaml  train_multi.yaml  train_short.yaml
perception_bev_learning/cfg/env/: deegan.yaml  gattaca.yaml  ge76.yaml  rsl_pc.yaml  tacc-lonestar6.yaml  tensor01.yaml
perception_bev_learning/cfg/experiment/: deegan_multi_debug.yaml  gatt_micro_cr_f_gvom_minz.yaml  gatt_micro_refactor_f_gvom_minz.yaml  gatt_micro_refactor_f_img.yaml  gatt_micro_refactor_f_pcl.yaml  gatt_micro_refactor_f_roadrunner.yaml  gatt_multi_refactor_f_exp_gvom.yaml  gatt_multi_refactor_f_exp_gvom_minz.yaml  gatt_multi_refactor_f_exp_gvom_minz_consistency.yaml  gatt_multi_refactor_f_exp_gvom_minz_consistency_test.yaml  gatt_multi_refactor_f_exp_gvom_minz_gnll.yaml  gatt_short_cr_f_gvom_minz.yaml  gatt_short_refactor_f_gvom_minz.yaml  gatt_short_refactor_f_img.yaml  gatt_short_refactor_f_pcl.yaml  gatt_short_refactor_f_roadrunner.yaml  rsl_anymal_debug.yaml  rsl_anymal_test.yaml
perception_bev_learning/cfg/logger/: wandb.yaml
perception_bev_learning/perception_bev_learning/: __init__.py
perception_bev_learning/perception_bev_learning/dataset/: __init__.py  bev_datamodule.py  bev_datamodule_batch.py  bev_datamodule_depth.py  bev_datamodule_multi.py  bev_datamodule_temporal.py  bev_datamodule_temporal_truncated.py  bev_dataset.py  bev_dataset_depth.py  bev_dataset_multi.py  bev_dataset_multi_temporal_truncated.py  bev_dataset_temporal.py  bev_dataset_temporal_batch.py  bev_dataset_temporal_truncated.py
perception_bev_learning/perception_bev_learning/lightning/: __init__.py  lightning_bev.py  lightning_bev_depth.py  lightning_bev_multi.py  lightning_bev_multi_consistency.py  lightning_bev_multi_gnll.py  lightning_bev_std_deprecated.py  lightning_bev_temporal.py  lightning_bev_temporal_batch.py  lightning_bev_temporal_truncated.py
perception_bev_learning/perception_bev_learning/loss/: __init__.py  loss_functions.py  loss_manager.py
perception_bev_learning/perception_bev_learning/models/: builder.py
perception_bev_learning/perception_bev_learning/network/: decoder.py
perception_bev_learning/perception_bev_learning/ops/: __init__.py  sparse_block.py  utils.py
perception_bev_learning/perception_bev_learning/preprocessing/: __init__.py  conventions.py  get_h5py_files.py  helper.py  ignore_tf_warnings.py  rosbag_merging.py  transforms.py
perception_bev_learning/perception_bev_learning/ros/: __init__.py  ros_visualizer.py
rviz/: bev_inference.rviz
scripts/conversion/: resize_jpg_images.py  resize_torch_images.py  save_jpg_to_png.py  save_torch_img_to_gif.py
scripts/dataset_generation/: save_feat_from_graph.py
scripts/inspection/: plot_pred_by_threshold.py  print_image.py  print_shape_tensor.py  show_mean_feat_per_class.py
scripts/old/: pointcloud_on_image.py
scripts/visualization/: create_gif.py  overlay_two_images.py  overlay_vehicle_mask.py  show_torch_img.py
tools/dynamic_params/: package.xml
tools/dynamic_params_bev/: CMakeLists.txt  package.xml
tools/run/: run.sh  run_train.sh
tools/visu/: CMakeLists.txt
(+450 files in other folders)
