<?xml version="1.0"?>
<package>
  <name>perception_bev_learning_ros</name>
  <version>1.0.0</version>
  <description>The perception_bev_learning_ros package</description>
  <maintainer email="patelm@ethz.ch">Manthan Patel</maintainer>
  <author email="patelm@ethz.ch">Manthan Patel</author>
  <author email="jonfrey@ethz.ch">Jonas Frey</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pybind11_catkin</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>ros_numpy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>pybind11_catkin</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  
  <export>
  </export>
</package>