<?xml version="1.0"?>
<package format="2">
  <name>bevnet_visualizer</name>
  <version>1.0.0</version>
  <description>BEVnet visualizer</description>
  <license>Proprietary</license>
  <maintainer email="schmirob@ethz.ch">Robin Schmid</maintainer>
  <author email="schmirob@ethz.ch">Robin Schmid</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>